update guava, deps sha and fix one of the maven warning
other one requires maven update their deps and release a new maven version because of the use of Unsafe in a library Maven is using