@@ -46,6 +46,8 @@ MIXIN_VERSION=${versionProperties["mixin.version"]}
 
 rm -rf "\${project.basedir}"
 
+export MAVEN_OPTS="--enable-native-access=ALL-UNNAMED"
+
 ensure_m2_artifact_exists() {
  GROUP=$1
  ARTIFACT=$2
